--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@
 # Core dependencies
 requests>=2.31.0
 aiohttp>=3.8.0
-asyncio
 
 # Database
-sqlite3  # Built-in with Python
+# sqlite3 is built-in with Python
+aiosqlite>=1.3.0
 
 # Data processing
 pandas>=2.0.0
@@ -23,15 +23,10 @@ pandas>=2.0.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
 
-# Local AI (TODO: implement when available)
-# mixtral-api-client  # Placeholder for local Mixtral integration
-
-# Web framework (optional for API)
+# Web framework
 fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
-fastapi>=0.100.0
-uvicorn>=0.20.0
 
 # Testing
 pytest>=7.0.0
