--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ aiohttp>=3.8.0
 asyncio
 
 # Database
-sqlite3  # Built-in with Python
+# sqlite3 is built-in with Python
 
 # Data processing
 pandas>=2.0.0
@@ -30,8 +30,6 @@ Pillow>=10.0.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
-fastapi>=0.100.0
-uvicorn>=0.20.0
 
 # Testing
 pytest>=7.0.0
